--- a/大图.html
+++ b/大图.html
@@ -11,9 +11,17 @@
 				height:50px;
 				text-align: center;
 			}
+			#ddd{
+				color: red;
+				width: 300px;
+				height:50px;
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body background="dd.jpg">
-		<h1 id="ww">爱爱爱爱爱爱爱</h1>
+		<h1 id="ww">爱爱爱爱爱爱爱我鬼  我才不信</h1>
+		<br />
+		<p  id="ddd"/>爬去学习了</p>
 	</body>
 </html>
