--- a/可恶1.html
+++ b/可恶1.html
@@ -69,7 +69,7 @@
 				<textarea row="200px" cols="50px">备注</textarea>
 				<br />
 				<br />
-				<a href="大图.html">
+				<a href="大图2.html">
 					<input type="submit" value="爱高大帅请点击" id="ws"/>
 				</a>
 				
